--- a/_site.yml
+++ b/_site.yml
@@ -19,7 +19,7 @@ navbar:
         - text: "About LEADING"
           href: fellow-about.html
         - text: "Work in Progress"
-          href: /fellow/projects.html
+          href: https://amandawhitmire.github.io/fellow/projects.html
 #    - icon: fab fa-orcid
 #      href: https://orcid.org/0000-0003-2429-8879 
 output: distill::distill_article
