--- a/_site.yml
+++ b/_site.yml
@@ -14,8 +14,8 @@ navbar:
       href: cv.html
     - text: "Products"
       href: products.html
-    - text: "Fellowship"
-      href: fellow-about.html
+    - text: "Blog"
+      href: https://amandawhitmire.github.io/blog/
 #    - icon: fab fa-orcid
 #      href: https://orcid.org/0000-0003-2429-8879 
 output: distill::distill_article
